--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,7 @@
 [package]
-name = "GuessingGame"
+name = "guessing_game"
 version = "0.1.0"
+repository = "https://github.com/XcaliberRage/guessing_game.git"
 authors = ["XcaliberRage <xcalibershard@gmail.com>"]
 edition = "2018"
 
@@ -8,3 +9,6 @@ edition = "2018"
 
 [dependencies]
 rand = "0.5.5"
+ggez = "0.6.0-rc1"
+glam = { version = "0.12", features = ["mint"]}
+mint = "0.5"
